<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_question">Add Question</string>
    <string name="edit_question">Edit Question</string>
    <string name="title_activity_study">Study</string>
    <string name="share">Share</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="new_user">New user</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="library">Library</string>
    <string name="shuffle_questions">Shuffle questions</string>
    <string name="title_activity_take_the_test">Take The Test</string>
    <string name="question">Question:</string>
    <string name="alternative_answers">Alternative answers: (Select the correct answer)</string>
    <string name="alternative_a">A:</string>
    <string name="alternative_b">B:</string>
    <string name="alternative_c">C:</string>
    <string name="alternative_d">D:</string>
    <string name="test_score">Test score:</string>
    <string name="questions_left">questions left:</string>
    <string name="alternative_info">Click on the answer you think is correct!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="quit">Quit</string>
    <string name="add">Add</string>
    <string name="picture">picture</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_share">Share</string>
	<string name="dialog_creating_user">Creating user&#8230;</string>
	<string name="dialog_log_in">Logging in&#8230;</string>
	<string name="error_empty_username_or_password">Both username and password must be filled in</string>
	<string name="error_username">Invalid characters in the username or more than 20 characters!</string>
	<string name="error_password">Invalid characters in the password or more than 20 characters!</string>
	<string name="username_exist">The username already exists!</string>
	<string name="empty_title">Empty</string>
	<string name="folder">Folder</string>
	<string name="test">Test</string>
	<string name="dialog_create">What do you want to create?</string>
	<string name="write_name_test">Enter the name of the test:</string>
	<string name="write_name_folder">Enter the name of the folder:</string>
	<string name="error_empty_name">Name is a required field!</string>
	<string name="choice_dialog_title">What do you want to do?</string>
	<string name="no_tests_added">No tests have been added!</string>
	<string name="dialog_folder_message">Press a test to add a question</string>
	<string name="add_test">Add test</string>
	<string name="add_question">Add question</string>
	<string name="no_questions_added">No questions have been added!</string>
	<string name="dialog_test_message">Click on a question to edit.</string>
	<string name="read_from_file_error_message">Error reading from file. Creates a new empty list!</string>
	<string name="answer">Answer:</string>
	<string name="no_questions">There are no questions in this test!</string>
	<string name="choose_test">Choose test:</string>
	<string name="right_answer">Right answer</string>
	<string name="wrong_answer">Wrong answer</string>
	<string name="new_question">New question</string>
	<string name="no_more_questions">No more questions in this test</string>
	<string name="test_completed">Test completed!</string>
	<string name="answered_correctly">Answered correctly</string>
	<string name="answered_incorrectly">Answered incorrectly</string>
	<string name="right">Right:</string>
	<string name="wrong">Wrong:</string>
	<string name="error_choose_test">Error occurred when selecting a test, try again.</string>
	<string name="download">Download</string>
	<string name="downloaded">Downloaded</string>
	<string name="dialog_downloading">Downloading&#8230;</string>
	<string name="dialog_sharing">Sharing&#8230;</string>
	<string name="share_with_user_text">Enter the username of the person you want to share with and press the test you want to share:</string>
	<string name="empty_share_with_user">Username must be filled in!</string>
	<string name="unavailable">The service is unavailable</string>
</resources>