<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
   	android:background="@drawable/doribook2login"
   	android:onClick="removeFocusFromEditText">
   	
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="10dp"
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="#7FFFFFFF">
        
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:layout_marginLeft="20dp"
    		android:text="@string/username"
    		android:textStyle="bold"/>
        
        <EditText 
            android:id="@+id/username"
            android:layout_width="match_parent"
    		android:layout_height="35dp" 
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="20dp"
    		android:paddingLeft="5dp"
    		android:inputType="text|textCapSentences"
        	android:background="@drawable/view_border"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="20dp" 
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:background="#7FFFFFFF">
        
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:layout_marginLeft="20dp"
    		android:text="@string/password"
    		android:textStyle="bold"/>
        
        <EditText 
            android:id="@+id/password"
            android:layout_width="match_parent"
    		android:layout_height="35dp" 
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="20dp"
    		android:paddingLeft="5dp"
    		android:inputType="textPassword"
        	android:background="@drawable/view_border"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal">
        
        <Button 
            android:layout_width="100dp"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="20dp"
    		android:text="@string/new_user"
    		android:background="@drawable/answer_button_state"
    		android:onClick="newUser"/>
        
        <Button 
            android:layout_width="100dp"
    		android:layout_height="wrap_content" 
    		android:text="@string/log_in"
    		android:background="@drawable/answer_button_state"
    		android:onClick="logIn"/>
    </LinearLayout>
</LinearLayout>